got basic launch card generation

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <header id="header-container">
-      BUZZED ROCKET
-    </header>
-    <main></main>
+    <header id="header-container">BUZZED ROCKET</header>
+    <main>
+      <div class="rocket-display"></div>
+    </main>
     <script src="./assets/js/javascript.js"></script>
   </body>
 </html>
