--- a/index.html
+++ b/index.html
@@ -9,13 +9,70 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <header id="header-container">
       BUZZED ROCKET
     </header>
-    <main></main>
+    <main>
+      <div class="city-name">Cape Canaveral</div>
+      <div class="dropdown is-hoverable">
+        <div class="dropdown-trigger">
+          <button
+            class="button"
+            aria-haspopup="true"
+            aria-controls="dropdown-menu3"
+          >
+            <span class="icon is-small">
+              <i class="fa fa-bars"></i>
+            </span>
+            <span>I'm looking for nearby.....</span>
+          </button>
+        </div>
+        <div class="dropdown-menu" id="dropdown-menu3" role="menu">
+          <div class="dropdown-content dropdown-item-hover-background-color">
+            <a href="#" class="dropdown-item" data-val="restuarant">
+              Restuarant
+            </a>
+            <a href="#" class="dropdown-item" data-val="Bar">
+              Bar
+            </a>
+            <a href="#" class="dropdown-item" data-val="Brewery">
+              Brewery
+            </a>
+            <a href="#" class="dropdown-item" data-val="Pub">
+              Pub
+            </a>
+            <a href="#" class="dropdown-item" data-val="Park">
+              Park
+            </a>
+            <a href="#" class="dropdown-item" data-val="Spa">
+              Spa
+            </a>
+            <a href="#" class="dropdown-item" data-val="Hotel">
+              Hotel
+            </a>
+            <!-- <hr class="dropdown-divider" />
+            <a href="#" class="dropdown-item" data-val="More">
+              More
+            </a> -->
+          </div>
+        </div>
+      </div>
+
+      <div id="map"></div>
+      <div class="search-results-container"></div>
+    </main>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
     <script src="./assets/js/javascript.js"></script>
   </body>
 </html>
