added final touches to css and html for desktop display

--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
 
 <body>
     <!--Hero Section-->
-    <header class="container block">
+    <header class="block">
         <div class="cntr-content">
-            <img alt="Buzzed Rocket" class="bdr-btm" src="./assets/images/buzzed rocket.png" />
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum mollitia quis alias,
-                dolorum eius harum
-                maxime
-                voluptas quibusdam. Quos voluptate, sunt velit in totam ullam? Illum culpa nihil enim velit!
-                &#128640;</p>
+            <img alt="Buzzed Rocket" class="alt-size" src="./assets/images/buzzed rocket.png" />
+            <div class="bdr-btm"></div>
+            <div class="translucent-bg">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum mollitia quis alias,
+                    dolorum eius harum
+                    maxime
+                    voluptas quibusdam. Quos voluptate, sunt velit in totam ullam? Illum culpa nihil enim velit!
+                    &#128640;</p>
+            </div>
         </div>
     </header>
 
@@ -31,23 +34,25 @@
             <form class="form-design">
                 <p class="text-color-gold">Enter City Name</p>
                 <label name="search"></label>
-                <input type="text" id="name" name="cityName" placeholder="ex. 'Orlando'">
+                <input type="text" class="city-search" id="name" name="cityName" placeholder="ex. 'Orlando'">
             </form>
-        </div>
-        <div class="block cntr-content">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5902.74827633306!2d-80.60844400444921!3d28.39525533810854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e0a7b6cff68011%3A0x559fd6cc67d2451c!2sLa%20Cantina!5e0!3m2!1sen!2sus!4v1654817887787!5m2!1sen!2sus"
-                width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
             <div class="bdr-btm-gold container"></div>
         </div>
-        <div class="block cntr-content">
-            <p class="text-color-gold">Nearest Space Shuttle Location</p>
-            <img class="rocket-img" src="./assets/images/Cape_Carnaval.png" alt="temp-placeholder" />
+        <div class="alt-content">
+            <div class="block cntr-content">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5902.74827633306!2d-80.60844400444921!3d28.39525533810854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e0a7b6cff68011%3A0x559fd6cc67d2451c!2sLa%20Cantina!5e0!3m2!1sen!2sus!4v1654817887787!5m2!1sen!2sus"
+                    width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="block cntr-content">
+                <p class="text-color-gold">Nearest Space Shuttle Location</p>
+                <img class="rocket-img" src="./assets/images/Cape_Carnaval.png" alt="temp-placeholder" />
+            </div>
         </div>
     </main>
     <footer>
-        <h2 class="is-size-4">Contact Us!</h2>
+        <h2 class="is-size-4-mobile">Contact Us!</h2>
         <div class="cntr-content">
             <a href="#"><img class="svg-img" src="./assets/images/icons8-facebook.svg" /></a>
             <a href="#"><img class="svg-img" src="./assets/images/icons8-twitter-circled.svg" /></a>
