--- a/index.html
+++ b/index.html
@@ -31,23 +31,15 @@
     <!--Main Container for search, pub area's and launch info-->
     <main>
         <div class="line-border block">
-            <form class="form-design">
-                <p class="text-color-gold">Enter City Name</p>
-                <label name="search"></label>
-                <input type="text" class="city-search" id="name" name="cityName" placeholder="ex. 'Orlando'">
-            </form>
+            <!--search bar goes here-->
             <div class="bdr-btm-gold container"></div>
         </div>
         <div class="alt-content">
-            <div class="block cntr-content">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5902.74827633306!2d-80.60844400444921!3d28.39525533810854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e0a7b6cff68011%3A0x559fd6cc67d2451c!2sLa%20Cantina!5e0!3m2!1sen!2sus!4v1654817887787!5m2!1sen!2sus"
-                    width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <!--content for search results here-->
+            <div class="block cntr-content" id="">
             </div>
-            <div class="block cntr-content">
-                <p class="text-color-gold">Nearest Space Shuttle Location</p>
-                <img class="rocket-img" src="./assets/images/Cape_Carnaval.png" alt="temp-placeholder" />
+            <!--content for shuttle launch here-->
+            <div class="block cntr-content" id="">
             </div>
         </div>
     </main>
@@ -69,3 +61,4 @@
 <!--icon's by https://icons8.com -->
 <!--cape carnival img: http://robotcosmonaut.tumblr.com/tagged/NASA/page/6 -->
 <!--bg image: https://ingallsimages.com/ -->
+<!--header bg image: https://shutterstock.com/ -->
