--- a/index.html
+++ b/index.html
@@ -23,56 +23,86 @@
     <header id="header-container">
       BUZZED ROCKET
     </header>
-    <main>
-      <div class="city-name">Cape Canaveral</div>
-      <div class="dropdown is-hoverable">
-        <div class="dropdown-trigger">
-          <button
-            class="button"
-            aria-haspopup="true"
-            aria-controls="dropdown-menu3"
-          >
-            <span class="icon is-small">
-              <i class="fa fa-bars"></i>
-            </span>
-            <span>I'm looking for nearby.....</span>
-          </button>
-        </div>
-        <div class="dropdown-menu" id="dropdown-menu3" role="menu">
-          <div class="dropdown-content dropdown-item-hover-background-color">
-            <a href="#" class="dropdown-item" data-val="restuarant">
-              Restuarant
-            </a>
-            <a href="#" class="dropdown-item" data-val="Bar">
-              Bar
-            </a>
-            <a href="#" class="dropdown-item" data-val="Brewery">
-              Brewery
-            </a>
-            <a href="#" class="dropdown-item" data-val="Pub">
-              Pub
-            </a>
-            <a href="#" class="dropdown-item" data-val="Park">
-              Park
-            </a>
-            <a href="#" class="dropdown-item" data-val="Spa">
-              Spa
-            </a>
-            <a href="#" class="dropdown-item" data-val="Hotel">
-              Hotel
-            </a>
-            <!-- <hr class="dropdown-divider" />
-            <a href="#" class="dropdown-item" data-val="More">
-              More
-            </a> -->
-          </div>
+    <main class="main-container">
+      <button class="button back-btn">
+        <span class="icon is-small">
+          <img src="./assets/images/icons8-refresh-64.png" />
+        </span>
+        <span>RESET</span>
+      </button>
+      <div class="field">
+        <label class="label">Enter City or Place</label>
+        <div class="control">
+          <input
+            class="input city-place-name"
+            type="text"
+            placeholder="City OR Place"
+          />
         </div>
       </div>
-
-      <div id="map"></div>
-      <div class="search-results-container"></div>
+      <div class="search-wrapper">
+        <div class="search-container">
+          <div class="dropdown is-hoverable">
+            <div class="dropdown-trigger" id="dropdown-trigger">
+              <button
+                class="button"
+                aria-haspopup="true"
+                aria-controls="dropdown-menu3"
+              >
+                <span class="icon is-small">
+                  <i class="fa fa-bars"></i>
+                </span>
+                <span>Point of Interest</span>
+              </button>
+            </div>
+            <div class="dropdown-menu" id="dropdown-menu3" role="menu">
+              <div
+                class="dropdown-content dropdown-item-hover-background-color"
+              >
+                <a href="#" class="dropdown-item" data-val="restuarant">
+                  Restuarant
+                </a>
+                <a href="#" class="dropdown-item" data-val="Bar">
+                  Bar
+                </a>
+                <a href="#" class="dropdown-item" data-val="Brewery">
+                  Brewery
+                </a>
+                <a href="#" class="dropdown-item" data-val="Pub">
+                  Pub
+                </a>
+                <a href="#" class="dropdown-item" data-val="Park">
+                  Park
+                </a>
+                <a href="#" class="dropdown-item" data-val="Spa">
+                  Spa
+                </a>
+                <a href="#" class="dropdown-item" data-val="Hotel">
+                  Hotel
+                </a>
+                <!-- <hr class="dropdown-divider" />
+                  <a href="#" class="dropdown-item" data-val="More">
+                    More
+                  </a> -->
+              </div>
+            </div>
+          </div>
+          <ul class="search-results-container"></ul>
+        </div>
+        <div class="map-container"></div>
+        <div class="block">
+          <label class="search-history-label">
+            <strong>Your Search History</strong>
+          </label>
+          <div class="search-history-container"></div>
+        </div>
+      </div>
     </main>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
+    <!-- <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrsurw828SkVRQ_yWxYG9W1t8LoxNqmik&callback=initMap"
+    ></script> -->
     <script src="./assets/js/javascript.js"></script>
   </body>
 </html>
