deb css changes

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             type="text"
             placeholder="City OR Place"
             />
+            <span class="error-message"></span>
           </div>
         </div>
         <div class="search-wrapper">
@@ -67,7 +68,7 @@
                   <span>Point of Interest</span>
                 </button>
               </div>
-              <div class="dropdown-menu" id="dropdown-menu3" role="menu">
+              <div class="dropdown-menu" id="dropdown-menu3" role="menu" disabled="true">
                 <div
                   class="dropdown-content dropdown-item-hover-background-color"
                 >
