minor chnages to CSS

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         />
         <div class="bdr-btm"></div>
         <div class="translucent-bg">
-          <p>
+          <p> Welcome to Buzz Rocket®! The unique site where you can explore luanch sites and search for near points of interest with the 
+            of a button. Just search for the city below and what place you are interested in and Buzz Rocket® will fine the nearest one
+            to your location!
             &#128640;
           </p>
         </div>
