--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <div class="map-container"></div>
               <div class="block-search">
                 <label class="search-history-label">
-                  <strong>Your Search History</strong>
+                  <strong>"Your Search History</strong>
                 </label>
                 <div class="search-history-container"></div>
               </div>
