updated html css and js

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
         />
         <div class="bdr-btm"></div>
         <div class="translucent-bg">
-          <p> Welcome to Buzz Rocket®! The unique site where you can explore luanch sites and search for near points of interest with the 
-            of a button. Just search for the city below and what place you are interested in and Buzz Rocket® will fine the nearest one
-            to your location!
-            &#128640;
+          <p>
+            Welcome to Buzz Rocket®! The unique site where you can explore
+            luanch sites and search for near points of interest with the of a
+            button. Just search for the city below and what place you are
+            interested in and Buzz Rocket® will fine the nearest one to your
+            location! &#128640;
           </p>
         </div>
       </div>
@@ -118,7 +120,7 @@
               <div class="map-container"></div>
               <div class="block-search">
                 <label class="search-history-label">
-                  <strong>"Your Search History</strong>
+                  Your Search History
                 </label>
                 <div class="search-history-container"></div>
               </div>
