cleaned up css and html, fixed some element positioning

--- a/index.html
+++ b/index.html
@@ -49,13 +49,18 @@
     </header>
 
     <main class="main-container search-wrap">
-      <button class="button back-btn">
-        <span class="icon is-small">
-          <img src="./assets/images/icons8-refresh-64.png" />
-        </span>
-        <span>RESET</span>
-      </button>
       <div class="field">
+        <p>
+          Need a place to stay, some grub, or would like some beers,<br />while
+          you enjoy the launch your visiting?<br />Please search around the area
+          of launch!
+        </p>
+        <button class="button back-btn">
+          <span class="icon is-small">
+            <img src="./assets/images/icons8-refresh-64.png" />
+          </span>
+          <span>RESET</span>
+        </button>
         <label class="label text-color-gold">Enter City or Place</label>
         <div class="control">
           <input
@@ -90,21 +95,15 @@
                       <a href="#" class="dropdown-item" data-val="restuarant">
                         Restuarant
                       </a>
-                      <a href="#" class="dropdown-item" data-val="Bar">
-                        Bar
-                      </a>
+                      <a href="#" class="dropdown-item" data-val="Bar"> Bar </a>
                       <a href="#" class="dropdown-item" data-val="Brewery">
                         Brewery
                       </a>
-                      <a href="#" class="dropdown-item" data-val="Pub">
-                        Pub
-                      </a>
+                      <a href="#" class="dropdown-item" data-val="Pub"> Pub </a>
                       <a href="#" class="dropdown-item" data-val="Park">
                         Park
                       </a>
-                      <a href="#" class="dropdown-item" data-val="Spa">
-                        Spa
-                      </a>
+                      <a href="#" class="dropdown-item" data-val="Spa"> Spa </a>
                       <a href="#" class="dropdown-item" data-val="Hotel">
                         Hotel
                       </a>
@@ -129,17 +128,10 @@
         </div>
         <!-- <div class="bdr-btm-gold container"></div> -->
       </div>
-      <div class="alt-content">
-        <div class="block cntr-content">
-          <div id="map"></div>
-          <div class="search-results-container"></div>
-        </div>
+      <div class="rocket-display">
+        <h2><u>Here is the earliest mentioned launches!</u></h2>
       </div>
     </main>
-    <!--content for shuttle launch here-->
-    <section class="block ctr-content search-wrap-right">
-      <div class="rocket-display"></div>
-    </section>
     <!--Contact Info-->
     <footer>
       <h2 class="is-size-4-mobile">Contact Us!</h2>
