more fixes and changes to webpage

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <main class="main-container search-wrap">
       <div class="field">
-        <p>
+        <p class="text-color-gold">
           Need a place to stay, some grub, or would like some beers,<br />while
           you enjoy the launch your visiting?<br />Please search around the area
           of launch!
@@ -64,7 +64,7 @@
         <label class="label text-color-gold">Enter City or Place</label>
         <div class="control">
           <input
-            class="input city-place-name"
+            class="city-place-name"
             type="text"
             placeholder="City OR Place"
           />
@@ -129,7 +129,8 @@
         <!-- <div class="bdr-btm-gold container"></div> -->
       </div>
       <div class="rocket-display">
-        <h2><u>Here is the earliest mentioned launches!</u></h2>
+        <h2>Here are some the earliest mentioned launches!</h2>
+        </div>
       </div>
     </main>
     <!--Contact Info-->
@@ -148,7 +149,7 @@
       </div>
       <div class="cntr-content">
         <p><a href="#">buzzedrocket@gmail.com</a></p>
-        <p class="right">Buzzed Rocket 2022©</p>
+        <p>Buzzed Rocket 2022©</p>
       </div>
     </footer>
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
